--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
 
       <footer>
-           feico com ❤️ pela <a href="https://rocketseat.com.br" >Rocketseat</a>
+           feito com ❤️ pela <a href="https://rocketseat.com.br" >Rocketseat</a>
       </footer>
 
     </div>
